# Sourcerra-Agent

ai-service/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
ai-service/.github/workflows/: build.yml  deploy.yml  test.yml
ai-service/app/: main.py
ai-service/app/agents/: __init__.py  base.py  candidate_matching.py  candidate_summary.py  hiring_recommendation.py  interview.py  interview_debrief.py  orchestrator.py  outreach.py  recruiter_copilot.py  registry.py  resume_analysis.py
ai-service/app/api/: router.py
ai-service/app/clients/: ats.py  auth.py  backend.py  resume.py
ai-service/app/config/: logging.py  settings.py
ai-service/app/core/: dependencies.py  exceptions.py  middleware.py
ai-service/app/evaluation/: __init__.py  store.py  tracing.py
ai-service/app/mcp/: client.py  schemas.py  tools.py  transport.py
ai-service/app/observability/: __init__.py  metrics.py  tracer.py
ai-service/app/prompts/: candidate_matching.md  candidate_summary.md  dashboard.py  experiments.py  hiring_recommendation.md  interview.md  interview_debrief.md  outreach.md  recruiter_copilot.md  registry.py  resume_analysis.md  selection.py
ai-service/app/providers/: base.py  openrouter.py
ai-service/app/schemas/: __init__.py  agents.py  common.py  evaluation.py  evaluation_suite.py  health.py  models.py  prompts.py  tools.py  workflows.py
ai-service/app/services/: cache.py
ai-service/app/toolkits/: ats_toolkit.py  base.py  interview_toolkit.py  outreach_toolkit.py  resume_toolkit.py
ai-service/app/utils/: openai_sdk.py
ai-service/tests/: conftest.py  test_agents.py  test_ats_endpoints.py  test_candidate_matching.py  test_candidate_summary.py  test_clients.py  test_config.py  test_evaluation.py  test_evaluators.py  test_health.py  test_hiring_recommendation.py  test_interview_debrief.py  test_interview_questions.py  test_mcp_client.py  test_openrouter.py  test_orchestrator.py  test_outreach.py  test_prompts.py  test_recruiter_copilot.py  test_schemas.py
ats-mcp/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
ats-mcp/app/: main.py
ats-mcp/app/api/: mcp.py  (+1 more)
ats-mcp/ats_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ats-mcp/tests/: conftest.py  test_api_mcp.py  test_config.py  test_registry.py  test_schemas.py  test_schemas_extended.py  test_tools_candidates.py  test_tools_comments.py  test_tools_jobs.py  test_tools_tasks.py  test_tracing.py
(+59 files in other folders)
